--- a/docs/package.json
+++ b/docs/package.json
@@ -42,7 +42,8 @@
     "vee-validate": "^4.14.7",
     "vue": "^3.5.13",
     "vuex": "^4.1.0",
-    "web3": "^4.16.0"
+    "web3": "^4.16.0",
+    "ws": "^8.18.0"
   },
   "main": "index.js",
   "keywords": [],
