--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "AfricoinMarket",
   "short_name": "Africoin",
-  "start_url": "/",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "icon-192x192.png",
+      "src": "src/app_icon_192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "src/app_icon_512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
