Mise à jour de l'action upload-artifact à v3

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -27,7 +27,9 @@ jobs:
         run: flutter build apk --release
 
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: release-apk
           path: build/app/outputs/flutter-apk/app-release.apk
+```[_{{{CITATION{{{_2{[Bug]: `analyze` workflow fails because of deprecated version ... - GitHub](https://github.com/reactjs/react.dev/issues/7148)
+
