--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -16,7 +16,16 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'  # Ajoutez cette ligne pour spécifier la distribution
           java-version: 11
+          java-package: jdk
+          architecture: x64
+          check-latest: false
+          server-id: github
+          server-username: GITHUB_ACTOR
+          server-password: GITHUB_TOKEN
+          overwrite-settings: true
+          job-status: success
 
       - name: Install Node.js
         uses: actions/setup-node@v2
