--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'  # Ajoutez cette ligne pour spécifier la distribution
+          distribution: 'adopt'
           java-version: 11
           java-package: jdk
           architecture: x64
@@ -35,7 +35,8 @@ jobs:
       - name: Navigate to JS Directory and Install Dependencies
         run: |
           cd docs/public/js
-          npm install
+          npm install  # Ajoutez cette ligne pour générer le fichier package-lock.json
+          npm ci
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
